--- a/options.html
+++ b/options.html
@@ -6,6 +6,7 @@
   <title>ForgetfulMe Settings</title>
   <link rel="stylesheet" href="options.css">
   <link rel="stylesheet" href="utils/ui-messages.css">
+  <link rel="stylesheet" href="utils/ui-components.css">
 </head>
 <body>
   <div id="app">
@@ -15,6 +16,7 @@
   <!-- Load utilities first -->
   <script src="utils/error-handler.js"></script>
   <script src="utils/ui-messages.js"></script>
+  <script src="utils/ui-components.js"></script>
   
   <!-- Load Supabase scripts -->
   <script src="supabase-client.js"></script>
