--- a/popup.html
+++ b/popup.html
@@ -17,6 +17,7 @@
   <script src="utils/error-handler.js"></script>
   <script src="utils/ui-messages.js"></script>
   <script src="utils/ui-components.js"></script>
+  <script src="utils/bookmark-transformer.js"></script>
   
   <!-- Load Supabase scripts -->
   <script src="supabase-client.js"></script>
