Use official supabase-js.min.js file

--- a/options.html
+++ b/options.html
@@ -20,7 +20,7 @@
   <script src="utils/bookmark-transformer.js"></script>
   
   <!-- Load Supabase scripts -->
-  <script src="supabase-client.js"></script>
+  <script src="supabase-js.min.js"></script>
   <script src="supabase-config.js"></script>
   <script src="supabase-service.js"></script>
   <script src="auth-ui.js"></script>
