--- a/popup.html
+++ b/popup.html
@@ -18,6 +18,7 @@
   <script src="utils/ui-messages.js"></script>
   <script src="utils/ui-components.js"></script>
   <script src="utils/bookmark-transformer.js"></script>
+  <script src="utils/config-manager.js"></script>
   
   <!-- Load Supabase scripts -->
   <script src="supabase-js.min.js"></script>
