Fix disjointed auth state

--- a/options.html
+++ b/options.html
@@ -19,6 +19,7 @@
   <script src="utils/ui-components.js"></script>
   <script src="utils/bookmark-transformer.js"></script>
   <script src="utils/config-manager.js"></script>
+  <script src="utils/auth-state-manager.js"></script>
   
   <!-- Load Supabase scripts -->
   <script src="supabase-js.min.js"></script>
