--- a/popup.html
+++ b/popup.html
@@ -1,31 +1,31 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ForgetfulMe</title>
-  <link rel="stylesheet" href="popup.css">
-  <link rel="stylesheet" href="utils/ui-messages.css">
-  <link rel="stylesheet" href="utils/ui-components.css">
-</head>
-<body>
-  <div id="app" class="container">
-    <!-- Content will be dynamically loaded by JavaScript -->
-  </div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>ForgetfulMe</title>
+    <link rel="stylesheet" href="popup.css" />
+    <link rel="stylesheet" href="utils/ui-messages.css" />
+    <link rel="stylesheet" href="utils/ui-components.css" />
+  </head>
+  <body>
+    <div id="app" class="container">
+      <!-- Content will be dynamically loaded by JavaScript -->
+    </div>
 
-  <!-- Load utilities first -->
-  <script src="utils/error-handler.js"></script>
-  <script src="utils/ui-messages.js"></script>
-  <script src="utils/ui-components.js"></script>
-  <script src="utils/bookmark-transformer.js"></script>
-  <script src="utils/config-manager.js"></script>
-  <script src="utils/auth-state-manager.js"></script>
-  
-  <!-- Load Supabase scripts -->
-  <script src="supabase-js.min.js"></script>
-  <script src="supabase-config.js"></script>
-  <script src="supabase-service.js"></script>
-  <script src="auth-ui.js"></script>
-  <script src="popup.js"></script>
-</body>
-</html> 
+    <!-- Load utilities first -->
+    <script src="utils/error-handler.js"></script>
+    <script src="utils/ui-messages.js"></script>
+    <script src="utils/ui-components.js"></script>
+    <script src="utils/bookmark-transformer.js"></script>
+    <script src="utils/config-manager.js"></script>
+    <script src="utils/auth-state-manager.js"></script>
+
+    <!-- Load Supabase scripts -->
+    <script src="supabase-js.min.js"></script>
+    <script src="supabase-config.js"></script>
+    <script src="supabase-service.js"></script>
+    <script src="auth-ui.js"></script>
+    <script src="popup.js"></script>
+  </body>
+</html>
