--- a/popup.html
+++ b/popup.html
@@ -13,19 +13,11 @@
       <!-- Content will be dynamically loaded by JavaScript -->
     </div>
 
-    <!-- Load utilities first -->
-    <script src="utils/error-handler.js"></script>
-    <script src="utils/ui-messages.js"></script>
-    <script src="utils/ui-components.js"></script>
-    <script src="utils/bookmark-transformer.js"></script>
-    <script src="utils/config-manager.js"></script>
-    <script src="utils/auth-state-manager.js"></script>
-
     <!-- Load Supabase scripts -->
     <script src="supabase-js.min.js"></script>
-    <script src="supabase-config.js"></script>
-    <script src="supabase-service.js"></script>
-    <script src="auth-ui.js"></script>
-    <script src="popup.js"></script>
+    <script src="supabase-config.js" type="module"></script>
+    <script src="supabase-service.js" type="module"></script>
+    <script src="auth-ui.js" type="module"></script>
+    <script src="popup.js" type="module"></script>
   </body>
 </html>
