Fix login issues; prevent duplicate saves of bookmarks

--- a/options.html
+++ b/options.html
@@ -13,12 +13,9 @@
       <!-- Content will be dynamically loaded by JavaScript -->
     </div>
 
-    <!-- Load Supabase scripts -->
+    <!-- Load Supabase library -->
     <script src="supabase-js.min.js"></script>
-    <script src="supabase-config.js" type="module"></script>
-    <script src="supabase-service.js" type="module"></script>
-    <script src="auth-ui.js" type="module"></script>
-    <script src="config-ui.js" type="module"></script>
+    <!-- Load main options script -->
     <script src="options.js" type="module"></script>
   </body>
 </html>
