--- a/popup.html
+++ b/popup.html
@@ -13,11 +13,9 @@
       <!-- Content will be dynamically loaded by JavaScript -->
     </div>
 
-    <!-- Load Supabase scripts -->
+    <!-- Load Supabase library -->
     <script src="supabase-js.min.js"></script>
-    <script src="supabase-config.js" type="module"></script>
-    <script src="supabase-service.js" type="module"></script>
-    <script src="auth-ui.js" type="module"></script>
+    <!-- Load main popup script -->
     <script src="popup.js" type="module"></script>
   </body>
 </html>
