--- a/options.html
+++ b/options.html
@@ -4,9 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ForgetfulMe Settings</title>
-    <link rel="stylesheet" href="options.css" />
-    <link rel="stylesheet" href="utils/ui-messages.css" />
-    <link rel="stylesheet" href="utils/ui-components.css" />
+    <link rel="stylesheet" href="libs/pico.min.css" />
   </head>
   <body>
     <div id="app">
