Begin using modularized bookmark management

--- a/bookmark-management.html
+++ b/bookmark-management.html
@@ -13,7 +13,7 @@
 
     <!-- Load Supabase library -->
     <script src="supabase-js.min.js"></script>
-    <!-- Load main bookmark management script -->
-    <script src="bookmark-management.js" type="module"></script>
+    <!-- Load main bookmark management script (modular version) -->
+    <script src="bookmark-management/index.js" type="module"></script>
   </body>
 </html>
