Refactor options.js

--- a/options.html
+++ b/options.html
@@ -14,6 +14,6 @@
     <!-- Load Supabase library -->
     <script src="supabase-js.min.js"></script>
     <!-- Load main options script -->
-    <script src="options.js" type="module"></script>
+    <script src="options/index.js" type="module"></script>
   </body>
 </html>
