--- a/bookmark-management.html
+++ b/bookmark-management.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ForgetfulMe - Bookmark Management</title>
     <link rel="stylesheet" href="libs/pico.min.css" />
+    <link rel="stylesheet" href="shared-styles.css" />
+    <link rel="stylesheet" href="bookmark-management-styles.css" />
   </head>
   <body>
     <div id="app" class="container">
