--- a/options.html
+++ b/options.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ForgetfulMe Settings</title>
     <link rel="stylesheet" href="libs/pico.min.css" />
+    <link rel="stylesheet" href="shared-styles.css" />
+    <link rel="stylesheet" href="options-styles.css" />
   </head>
   <body>
     <div id="app">
