--- a/popup.html
+++ b/popup.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ForgetfulMe</title>
     <link rel="stylesheet" href="libs/pico.min.css" />
+    <link rel="stylesheet" href="shared-styles.css" />
     <link rel="stylesheet" href="popup-styles.css" />
   </head>
   <body>
