--- a/src/ui/confirm.html
+++ b/src/ui/confirm.html
@@ -45,17 +45,31 @@
         <div class="success-icon">✓</div>
         <h1>Email Confirmed!</h1>
         <p>Your email has been successfully confirmed and you're now signed in.</p>
-        
-        <div style="margin: 2rem 0; padding: 1rem; background: var(--pico-background-color); border-radius: var(--pico-border-radius);">
-          <h3 style="margin-top: 0;">How to use ForgetfulMe:</h3>
-          <ol style="text-align: left; margin: 1rem 0;">
-            <li>Look for the <strong>ForgetfulMe icon</strong> in your browser toolbar (top right)</li>
+
+        <div
+          style="
+            margin: 2rem 0;
+            padding: 1rem;
+            background: var(--pico-background-color);
+            border-radius: var(--pico-border-radius);
+          "
+        >
+          <h3 style="margin-top: 0">How to use ForgetfulMe:</h3>
+          <ol style="text-align: left; margin: 1rem 0">
+            <li>
+              Look for the <strong>ForgetfulMe icon</strong> in your browser toolbar (top right)
+            </li>
             <li>Click the icon to open the extension</li>
             <li>You'll be signed in and ready to start bookmarking!</li>
           </ol>
-          <p style="margin-bottom: 0;"><small>💡 Tip: If you don't see the icon, click the puzzle piece icon in your toolbar and pin ForgetfulMe.</small></p>
+          <p style="margin-bottom: 0">
+            <small
+              >💡 Tip: If you don't see the icon, click the puzzle piece icon in your toolbar and
+              pin ForgetfulMe.</small
+            >
+          </p>
         </div>
-        
+
         <button id="close-tab" class="primary">Close This Tab</button>
       </div>
 
