--- a/src/ui/popup.html
+++ b/src/ui/popup.html
@@ -21,7 +21,12 @@
           <button type="button" id="signin-tab" class="tab-button active" data-testid="signin-tab">
             Sign In
           </button>
-          <button type="button" id="signup-tab" class="tab-button secondary" data-testid="signup-tab">
+          <button
+            type="button"
+            id="signup-tab"
+            class="tab-button secondary"
+            data-testid="signup-tab"
+          >
             Sign Up
           </button>
         </div>
