feat(v2): add auth UI, background badge updates, supabase bundle, and tests
- Popup auth UI + sign-in/out flow and status\n- Background toggling via RPC + badge updates on tab changes\n- Supabase ESM bundle via esbuild, Docker/CI invoke bundling\n- Add url utils unit test and auth visual test\n- Guard chrome.* usage in tests

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -14,10 +14,21 @@
         <p>Track what you’ve read</p>
       </header>
 
-      <section>
+      <section id="auth-section" hidden>
+        <h2>Sign in</h2>
+        <form id="auth-form">
+          <label>Email<input id="auth-email" type="email" required /></label>
+          <label>Password<input id="auth-password" type="password" required /></label>
+          <button type="submit">Sign in</button>
+        </form>
+        <small id="auth-status" aria-live="polite"></small>
+      </section>
+
+      <section id="app-section" hidden>
         <div id="status-pill" data-testid="status-pill" class="status">Unknown</div>
         <div class="actions">
           <button id="toggle-btn" role="button">Toggle Read</button>
+          <button id="signout-btn" class="secondary" role="button">Sign out</button>
         </div>
       </section>
 
@@ -29,4 +40,3 @@
     <script type="module" src="./popup.js"></script>
   </body>
   </html>
-
