chore(ui): add deterministic font stack to options page for stable visuals

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>ForgetfulMe Options</title>
     <link rel="stylesheet" href="../lib/pico.min.css" />
+    <link rel="stylesheet" href="./options.css" />
   </head>
   <body>
     <main class="container">
@@ -30,4 +31,3 @@
     <script type="module" src="./options.js"></script>
   </body>
   </html>
-
