feat(ui): add toast messages and domain badges in popup recent list
- Toast system for success/error info\n- Domain chip next to status for each recent item\n- Hooked into sign-in failure and toggle RPC errors

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <main class="container">
+      <div id="message-area" aria-live="polite"></div>
       <header>
         <h1>ForgetfulMe</h1>
         <p>Track what you’ve read</p>
