feat(ui): pagination controls for recents and retry toasts
- Prev/Next pagination with page info\n- listRecent supports paging (range request)\n- Toasts now support Retry button for failed actions

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -36,6 +36,11 @@
       <section>
         <input id="search" type="search" placeholder="Search recent reads" />
         <ul id="recent-list" aria-live="polite"></ul>
+        <nav class="pagination">
+          <button id="prev-page" class="secondary" aria-label="Previous page">Prev</button>
+          <span id="page-info" class="meta" aria-live="polite"></span>
+          <button id="next-page" class="secondary" aria-label="Next page">Next</button>
+        </nav>
       </section>
     </main>
     <script type="module" src="./popup.js"></script>
