feat(ui): add search clear + keyboard shortcuts; persist state; add Supabase seed script
- Search clear button and '/' focus, Esc clears\n- Persist page and query in sessionStorage\n- Supabase seed script (requires SERVICE_ROLE key and SEED_USER_ID)\n- Minor layout improvements for search row

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -34,7 +34,10 @@
       </section>
 
       <section>
-        <input id="search" type="search" placeholder="Search recent reads" />
+        <div class="search-row">
+          <input id="search" type="search" placeholder="Search recent reads" />
+          <button id="clear-search" class="secondary" aria-label="Clear search">Clear</button>
+        </div>
         <ul id="recent-list" aria-live="polite"></ul>
         <nav class="pagination">
           <button id="prev-page" class="secondary" aria-label="Previous page">Prev</button>
